# SUMB_ShapeFitting

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  delete-ShapeFitting.cmd  package-ShapeFitting.cmd  regenerate.cmd  update-ShapeFitting.cmd  update_shapefitting_and_launch.cmd
src/: CMakeLists.txt  SUMB_ShapeFitting_premake5.lua  ShapeFitting_Plugins_premake5.lua  adaptive_premake5.lua  common_su_shapefitting.lua  externals.lua  proj_lib_adaptive_premake5.lua_fish  proj_lib_gte_adapter_premake5.lua  proj_lib_impexp_premake5.lua  update-ShapeFitting.cmd
src/Scripts/: autoload_shape_fitting.rb  mb_shape_fitting_plugin.rb
src/Scripts/maya/: shapeFittingUI.py  shapeFittingWindow.ui
src/algorithms/: Adaptive.cpp  Adaptive.h  AxisDistance.cpp  AxisDistance.h  adaptive_test.cpp  generic-algorithms.h  includes-algorithms.cpp  includes-algorithms.h  includes-test.cpp  includes-test.h
src/boost/: boost-geometry.cpp  boost-geometry.h  boostgeometry-adapted-glm.h
src/cgal/: cgal-bbox.cpp  cgal-bbox.h  includes-cgal.cpp  includes-cgal.h
src/gte/: gte-bbox.cpp  gte-bbox.h  includes-gte.cpp  includes-gte.h
src/io/: export.cpp  export.h  import.cpp  import.h
src/maya/: ShapeFittingCmd.cpp  ShapeFittingCmd.def  includes-maya.cpp  includes-maya.h
src/shared/: exports.cpp  exports.h  fit-poly.cpp  fit-poly.h  shared-geometry.cpp  shared-geometry.h  shared-logging.h
src/sketchup/: SUMB_ShapeFitting.cpp  SUMB_ShapeFitting.def  SUMB_ShapeFitting_rb20.def  SUMB_ShapeFitting_rb22.def  includes-shapefitting.cpp  includes-shapefitting.h
(+4 files in other folders)
